# Agent_Smiths_and-Leo

./: .gitignore  .pre-commit-config.yaml  README.md
latest_dev/: README.md  pyproject.toml  report.md
latest_dev/src/latest_dev/: crew.py  main.py
meeting_minutes/: Dockerfile  README.md  crewai_flow.html  pyproject.toml  requirements.txt
meeting_minutes/meeting_minutes/: action_items.txt  sentiment.txt  summary.txt
meeting_minutes/podcast_analysis/: action_items.txt  podcast_summary.txt  sentiment.txt
meeting_minutes/src/meeting_minutes/: First_Applied_LLM_office_hour_of_2025_transcript.txt  main.py
meeting_minutes/src/meeting_minutes/crews/gmailcrew/: gmailcrew.py
meeting_minutes/src/meeting_minutes/crews/gmailcrew/config/: tasks.yaml
meeting_minutes/src/meeting_minutes/crews/gmailcrew/tools/: gmail_tool.py  gmail_utility.py
meeting_minutes/src/meeting_minutes/crews/meeting_minutes_crew/: meeting_minutes_crew.py
meeting_minutes/src/meeting_minutes/crews/meeting_minutes_crew/config/: agents.yaml  tasks.yaml
pdf_rag/: pyproject.toml
pdf_rag/db/: chroma.sqlite3
pdf_rag/knowledge/: user_preference.txt
pdf_rag/src/pdf_rag/: crew.py  main.py
poem_flow/: poem.txt  pyproject.toml
scraped_news/: README.md  pyproject.toml
scraped_news/news/: 2024-12-31_news_article.md  2025-02-26_00-02-47_news_article.md  2025-02-26_00-20-56_news_article.md  2025-02-26_00-24-21_news_article.md  2025-02-26_00-39-00_news_article.md  2025-02-26_00-53-08_news_article.md  2025-02-26_01-51-37_news_article.md  2025-02-26_02-04-36_news_article.md
scraped_news/src/scraped_news/: crew.py  main.py
scraped_news/src/scraped_news/config/: tasks.yaml
(+3 files in other folders)
