[project]
name = "meeting_minutes"
version = "0.1.0"
description = "meeting_minutes using crewAI"
authors = [{ name = "Merhawi", email = "..." }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "meeting_minutes.main:kickoff"
plot = "meeting_minutes.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
