[project]
name = "scraped_news"
version = "0.1.0"
description = "scraped_news using crewAI"
authors = [{ name = "Merhawi", email = "..." }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
scraped_news = "scraped_news.main:run"
run_crew = "scraped_news.main:run"
train = "scraped_news.main:train"
replay = "scraped_news.main:replay"
test = "scraped_news.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
